--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "mlh-hackathon-nodejs-starter",
+  "name": "fair-street-api",
   "version": "0.1.0",
-  "description": "A hackathon starting point for new Nodejs applications",
+  "author": {
+    "email": "kgmdeveloper@gmail.com",
+    "name": "Kelvin Gaia Maués"
+  },
+  "description": "A Node.js API project to help people to find street fairs nearby",
   "scripts": {
     "start": "nodemon app/index.js",
     "deploy": "NODE_ENV=production node app/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
-    "morgan": "^1.9.1",
-    "pg": "^7.8.1",
-    "pg-hstore": "^2.3.2",
-    "sequelize": ">=5.3.0"
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
