--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "fair-street-api",
-  "version": "0.1.0",
-  "author": {
-    "email": "kgmdeveloper@gmail.com",
-    "name": "Kelvin Gaia Maués"
-  },
-  "description": "A Node.js API project to help people to find street fairs nearby",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app/index.js",
-    "deploy": "NODE_ENV=production node app/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kelvinmaues/fair-street-api.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kelvinmaues/fair-street-api/issues"
+  },
+  "homepage": "https://github.com/kelvinmaues/fair-street-api#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.3",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.2",
-    "express-session": "^1.15.6",
-    "mongodb": "^3.5.5",
-    "mongoose": "^5.9.7",
-    "morgan": "^1.9.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.22.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.6",
+    "@types/helmet": "^0.0.47",
+    "@types/node": "^14.0.13",
+    "typescript": "^3.9.5"
   }
 }
