--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index",
+    "webpack": "webpack --config webpack.config.ts"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,10 @@
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.47",
     "@types/node": "^14.0.13",
-    "typescript": "^3.9.5"
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
   }
 }
