--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   },
   "homepage": "https://github.com/kelvinmaues/fair-street-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "helmet": "^3.22.1"
+    "express-validator": "^6.5.0",
+    "helmet": "^3.22.1",
+    "mongodb": "^3.5.8",
+    "mongoose": "^5.9.18"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
