--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=staging && ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev": "NODE_ENV=development ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "start:staging": "NODE_ENV=staging ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "start:prod": "NODE_ENV=production ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
     "build": "tsc"
   },
   "repository": {
@@ -22,7 +24,6 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
@@ -38,6 +39,9 @@
     "@types/mongoose": "^5.7.24",
     "@types/node": "^14.0.13",
     "cross-env": "^7.0.2",
+    "custom-env": "^2.0.1",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5"
